
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int EXIT_FAILURE ;
 int dprintf (char*) ;
 int exit (int ) ;
 int modify_vsyscall ;
 int pthread_create (int *,int *,int ,int ) ;
 int pthread_join (int ,int *) ;
 int sleep (int) ;
 int verification_result ;
 int write (int,char*,int) ;

void verify_stage1(void)
{
    pthread_t v_thread;

    sleep(5);

    int x;
    for(x = 0; x < 300; x++) {

        pthread_create(&v_thread, ((void*)0), modify_vsyscall, 0);

        pthread_join(v_thread, ((void*)0));

        if(verification_result == 1) {
            exit(0);
        }

        write(2,".",1);
        sleep(1);
    }

    dprintf("[-] could not modify vsyscall\n");
    exit(EXIT_FAILURE);
}
